--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Дом Наркомфина</title>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Caption:wght@400;700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
 
     <body>
         <h1>Дом Наркомфина</h1>
-        <img src="img/narcomfin.jpg" width="500" alt="Дом Наркомфина">
+        <img src="img/narcomfin.jpg" alt="Дом Наркомфина">
         <p>Дом Наркомфина — один из ключевых памятников жилой архитектуры <a href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BD%D1%81%D1%82%D1%80%D1%83%D0%BA%D1%82%D0%B8%D0%B2%D0%B8%D0%B7%D0%BC_(%D0%B8%D1%81%D0%BA%D1%83%D1%81%D1%81%D1%82%D0%B2%D0%BE)" target="blank">конструктивизма</a>, 
             «опытный дом переходного типа». Построен в <a href="https://ru.wikipedia.org/wiki/1928_%D0%B3%D0%BE%D0%B4" target="blank">1928</a>—<a href="https://ru.wikipedia.org/wiki/1930_%D0%B3%D0%BE%D0%B4" target="blank">1930 годах</a> по проекту архитекторов <a href="https://ru.wikipedia.org/wiki/%D0%93%D0%B8%D0%BD%D0%B7%D0%B1%D1%83%D1%80%D0%B3,_%D0%9C%D0%BE%D0%B8%D1%81%D0%B5%D0%B9_%D0%AF%D0%BA%D0%BE%D0%B2%D0%BB%D0%B5%D0%B2%D0%B8%D1%87" target="blank">Моисея Гинзбурга</a>, 
             <a href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B8%D0%BB%D0%B8%D0%BD%D0%B8%D1%81,_%D0%98%D0%B3%D0%BD%D0%B0%D1%82%D0%B8%D0%B9_%D0%A4%D1%80%D0%B0%D0%BD%D1%86%D0%B5%D0%B2%D0%B8%D1%87">Игнатия Милиниса</a> и инженера <a href="https://ru.wikipedia.org/wiki/%D0%A1%D0%B5%D1%80%D0%B3%D0%B5%D0%B9_%D0%9B%D1%8C%D0%B2%D0%BE%D0%B2%D0%B8%D1%87_%D0%9F%D1%80%D0%BE%D1%85%D0%BE%D1%80%D0%BE%D0%B2" target="blank">Сергея Прохорова</a> для работников Народного комиссариата финансов СССР 
@@ -109,7 +113,5 @@
         <p>Также планировалось, что рядом с домом Наркомфина будет построен второй жилой дом с большими квартирами — ячейками типа К или D. 
             Не реализован.
         </p>
-
-        
     </body>
 </html>
