--- a/test.html
+++ b/test.html
@@ -62,5 +62,30 @@
             Милютиным, который в указанные годы (1924–1929) исполнял обязанности наркома финансов РСФСР и выступал в 
             качестве заказчика жилого комплекса. Сметная стоимость строительства составила 10 млн рублей.
         </p>
+
+        <h2>Архитектура жилого дома</h2>
+        <p>Подлинным новаторством для конца 1920-х годов была архитектура жилого корпуса. Она была настолько необычна и 
+            впечатляюща, что лишь немногие смогли увидеть в ней образ жилого дома будущего, черты которого он, безусловно, 
+            содержал.
+        </p>
+
+        <h3>Типы квартир этот заголовок специально увеличен, чтобы проверить интерлиньяж</h3>
+        <p>Здание включает в себя около десятка типов квартир, в том числе:</p>
+        <ul>
+            <li>Квартира типа F — основное количество жилых ячеек в доме минимального размера. В одни из них можно 
+                попасть из остеклённой галереи или коридора, спускаясь по внутриквартирной лестнице в общую комнату, а в 
+                другие — поднимаясь в неё также по аналогичной лестнице.
+            </li>
+            <li>Квартира типа K — 8 квартир для больших семей располагались в центральной части дома между лестничными 
+                клетками. Квартиры представляли собой двухъярусные жилые ячейки высотой каждого этажа 2,3 метра, при 
+                этом часть квартиры имела высоту потолка 4,6 метра, и в ней находилась общая жилая комната, выполняющая 
+                функции гостиной. На нижнем ярусе были устроены коридор, передняя, терраса и кухня, а в верхнем — две 
+                спальни размером 19,9 и 12,1 м². Кроме открытой террасы на втором этаже, для отдыха на поздухе и принятия 
+                солнечных ванн была предназначена также плоская крыша с разбитым на ней цветником.
+            </li>
+            <li>Квартира типа 2F. Сочетание разных жилых ячеек позволило избежать повторения галерей и коридоров на 
+                каждом этаже и сделать их светлыми, а во всех квартирах обеспечить сквозное проветривание.
+            </li>
+        </ul>
     </body>
 </html>
