--- a/test.html
+++ b/test.html
@@ -73,19 +73,38 @@
         <p>Здание включает в себя около десятка типов квартир, в том числе:</p>
         <ul>
             <li>Квартира типа F — основное количество жилых ячеек в доме минимального размера. В одни из них можно 
-                попасть из остеклённой галереи или коридора, спускаясь по внутриквартирной лестнице в общую комнату, а в 
+                попасть из остеклённой&nbsp;галереи или коридора, спускаясь по внутриквартирной лестнице в общую комнату, а в 
                 другие — поднимаясь в неё также по аналогичной лестнице.
             </li>
             <li>Квартира типа K — 8 квартир для больших семей располагались в центральной части дома между лестничными 
                 клетками. Квартиры представляли собой двухъярусные жилые ячейки высотой каждого этажа 2,3 метра, при 
                 этом часть квартиры имела высоту потолка 4,6 метра, и в ней находилась общая жилая комната, выполняющая 
-                функции гостиной. На нижнем ярусе были устроены коридор, передняя, терраса и кухня, а в верхнем — две 
-                спальни размером 19,9 и 12,1 м². Кроме открытой террасы на втором этаже, для отдыха на поздухе и принятия 
+                функции гостиной. На нижнем ярусе были устроены коридор, передняя,&nbsp;терраса и кухня, а в верхнем — две 
+                спальни размером 19,9 и&nbsp;12,1 м². Кроме открытой террасы на втором этаже, для отдыха на поздухе и принятия 
                 солнечных ванн была предназначена также плоская крыша с разбитым на ней цветником.
             </li>
-            <li>Квартира типа 2F. Сочетание разных жилых ячеек позволило избежать повторения галерей и коридоров на 
-                каждом этаже и сделать их светлыми, а во всех квартирах обеспечить сквозное проветривание.
+            <li>Квартира типа 2F. Сочетание разных жилых ячеек позволило избежать&nbsp;повторения галерей и коридоров на 
+                каждом этаже и сделать&nbsp;их светлыми, а во всех квартирах обеспечить сквозное проветривание.
             </li>
         </ul>
+        <p>Фасады жилого корпуса выглядят по разному, с восточной стороны, от Садового кольца — длинные ленточные окна 
+            и открытая галерея второго этажа. С противоположной западной стороны иная картина: большие квадраты 
+            остекления двухсветных общих комнат-гостиных и небольшие окна кухонь. В результате все спальни в доме 
+            ориентированы на утреннее солнце, а гостиные на вечернее.
+        </p>
+        <blockquote>«Квартиры для одиночек заменили семьями, семейные сделали коммунальными. Вместо закрытой столовой 
+            (коммунальный корпус) на пятом этаже сделали коммунальную кухню с рядами плит и корыт. Детский сад закрыли, 
+            коммунальный корпус превратился в типографию. Прачечная сохранилась, но она постепенно перестала обслуживать 
+            жильцов. В конце концов дом передали в ЖЭК, покрасили немыслимой жёлтой краской и перестали ремонтировать».
+        </blockquote>
+
+        <h2>Критика проекта</h2>
+        <h3>С технической стороны</h3>
+        <p>Объектом критика, в первую очередь со стороны качества использованных строительных материалов, стали несущие 
+            стены, так как жилой корпус ни разу не ремонтировали за все 80 лет его существования. Штукатурка фасадов 
+            осыпалась, а стены из кустарно выполненных цементных и шлаковых блоков, сделанных прямо на стройке, разрушались. 
+            Наполнителями в цементном растворе служили разные подручные материалы, в том числе, металлургический шлак, солома, 
+            камыш.
+        </p>
     </body>
 </html>
