--- a/test.html
+++ b/test.html
@@ -7,9 +7,29 @@
         <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Caption:wght@400;700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/sidebar.css">
     </head>
 
     <body>
+        <nav>
+            <ul>
+                <li>Дом Наркомфина</li>
+                <li>История создания</li>
+                <li>Идеология</li>
+                <li>Пространственная организация</li>
+                <li>Архитектура
+                    <ul>
+                        <li>Типы квартир</li>
+                    </ul>
+                </li>
+                <li>Критика проекта
+                    <ul>
+                        <li>С технической стороны</li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+
         <h1>Дом Наркомфина — жилой дом переходного типа</h1>
         <p>Жилой дом переходного типа, построенный в 1930 году по проекту архитекторов Моисея Гинзбурга и Игнатия 
             Милиниса для работников Народного комиссариата финансов СССР (Наркомфина). Находится в Москве на Новинском 
@@ -73,18 +93,18 @@
         <p>Здание включает в себя около десятка типов квартир, в том числе:</p>
         <ul>
             <li>Квартира типа F — основное количество жилых ячеек в доме минимального размера. В одни из них можно 
-                попасть из остеклённой&nbsp;галереи или коридора, спускаясь по внутриквартирной лестнице в общую комнату, а в 
+                попасть из остеклённой галереи или коридора, спускаясь по внутриквартирной лестнице в общую комнату, а в 
                 другие — поднимаясь в неё также по аналогичной лестнице.
             </li>
             <li>Квартира типа K — 8 квартир для больших семей располагались в центральной части дома между лестничными 
                 клетками. Квартиры представляли собой двухъярусные жилые ячейки высотой каждого этажа 2,3 метра, при 
                 этом часть квартиры имела высоту потолка 4,6 метра, и в ней находилась общая жилая комната, выполняющая 
-                функции гостиной. На нижнем ярусе были устроены коридор, передняя,&nbsp;терраса и кухня, а в верхнем — две 
-                спальни размером 19,9 и&nbsp;12,1 м². Кроме открытой террасы на втором этаже, для отдыха на поздухе и принятия 
+                функции гостиной. На нижнем ярусе были устроены коридор, передняя, терраса и кухня, а в верхнем — две 
+                спальни размером 19,9 и 12,1 м². Кроме открытой террасы на втором этаже, для отдыха на поздухе и принятия 
                 солнечных ванн была предназначена также плоская крыша с разбитым на ней цветником.
             </li>
-            <li>Квартира типа 2F. Сочетание разных жилых ячеек позволило избежать&nbsp;повторения галерей и коридоров на 
-                каждом этаже и сделать&nbsp;их светлыми, а во всех квартирах обеспечить сквозное проветривание.
+            <li>Квартира типа 2F. Сочетание разных жилых ячеек позволило избежать повторения галерей и коридоров на 
+                каждом этаже и сделать их светлыми, а во всех квартирах обеспечить сквозное проветривание.
             </li>
         </ul>
         <p>Фасады жилого корпуса выглядят по разному, с восточной стороны, от Садового кольца — длинные ленточные окна 
